@@ -32,7 +32,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>--add-modules jdk.httpserver --add-reads com.qxotic.jinfer.hub=jdk.httpserver</argLine>
+          <argLine>@{argLine} ${jinfer.jvm.flags} --add-reads com.qxotic.jinfer.hub=jdk.httpserver</argLine>
         </configuration>
       </plugin>
     </plugins>
